# imageToGrayLayers

./: CMakeLists.txt  LICENSE  README.md
src/: filters.cpp  filters.h  io.cpp  io.h  main.cpp  utils.cpp  utils.h
